# corradin-ovp-utils

./: .gitignore  00_core.ipynb  01_datasets_gen_file_format.ipynb  01_datasets_genetic_dataset.ipynb  02_datasets_OVPDataset.ipynb  03_datasets_sample_file.ipynb  04_odds_ratio.ipynb  05_datasets_CombinedGenoPheno.ipynb  06_utils.ipynb  07_permutations.ipynb  08_MTC.ipynb  Demo.ipynb  Field.ipynb  FieldSet.ipynb  README.md  RunDaskCluster.ipynb  catalog.ipynb  cli.ipynb  datasets_bgen_file_format.ipynb  datasets_genetic_file.ipynb  datasets_schemas.ipynb  error_handling.ipynb  extract_genetic_data.ipynb  index.ipynb  prefect_OVP_pipeline.ipynb  prefect_permutation_flow.ipynb  prefect_step1_flow.ipynb  pyproject.toml  settings.ini  test_MS_chr22.tsv  test_data_generation.ipynb
conf/base/: catalog.yaml  catalog_intermediate_output.yaml
corradin_ovp_utils/: MTC.py  None.py  _nbdev.py  catalog.py  cli.py  odds_ratio.py  permutations.py
corradin_ovp_utils/conf/: example_prefect_step1_conf.yaml  example_prefect_step1_filled_conf.yaml
corradin_ovp_utils/datasets/: CombinedGenoPheno.py  OVPDataset.py  sample_file.py  schemas.py  utils.py
corradin_ovp_utils/prefect_flows/: full_pipeline.py  step1.py  step1_bad.py  step2.py
data/intermediate_output/: case_geno_each_sample.tsv  geno_each_sample.tsv
docs/: Untitled.html  _config.yml  catalog.html  core.html  datasets_CombinedGenoPheno.html  datasets_OVPDataset.html  datasets_genetic_dataset.html  datasets_sample_file.html  extract_genetic_data.html  index.html  odds_ratio.html  sidebar.json  utils.html
docs/_data/: topnav.yml
nbdev_tutorial/: _nbdev.py  extract_genetic_data.py
streamlit_app/: app.py  app_with_analysis.py
(+26 files in other folders)
