[tool.poetry]
name = "nbdev_tutorial_2nd_try"
version = "0.1.0"
description = ""
authors = ["An <hoangthienan95@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.0.7"
nbdev = "^1.1.12"
plotly = "^4.14.3"
pandas = "^1.2.1"
kedro = "^0.17.0"
pydantic = "^1.7.3"
tqdm = "^4.58.0"
portray = "^1.5.2"
twine = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
